--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,7 +37,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><%= t('.app_name') %></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -63,8 +63,8 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5"><%= t('.header_section.text') %></h1>
-            <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger"><%= t('.header_section.button') %></a>
+            <h1 class="mb-5"><%= t('.hero_section.text') %></h1>
+            <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger"><%= t('.hero_section.button') %></a>
           </div>
         </div>
         <div class="col-lg-5 my-auto">
@@ -86,7 +86,7 @@
     </div>
   </header>
 
-  <section class="download bg-primary text-center" id="download">
+  <section style="display: none;" class="download bg-primary text-center" id="download">
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto">
@@ -104,8 +104,8 @@
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading text-center">
-        <h2>Unlimited Features, Unlimited Fun</h2>
-        <p class="text-muted">Check out what you can do with this app theme!</p>
+        <h2><%= t('.features_section.title') %></h2>
+        <p class="text-muted"><%= t('.features_section.text_html') %></p>
         <hr>
       </div>
       <div class="row">
@@ -130,15 +130,15 @@
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-screen-smartphone text-primary"></i>
-                  <h3>Device Mockups</h3>
-                  <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                  <h3><%= t('.features_section.first.title') %></h3>
+                  <p class="text-muted"><%= t('.features_section.first.text') %></p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-camera text-primary"></i>
-                  <h3>Flexible Use</h3>
-                  <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                  <h3><%= t('.features_section.second.title') %></h3>
+                  <p class="text-muted"><%= t('.features_section.second.text') %></p>
                 </div>
               </div>
             </div>
@@ -146,15 +146,15 @@
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-present text-primary"></i>
-                  <h3>Free to Use</h3>
-                  <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                  <h3><%= t('.features_section.third.title') %></h3>
+                  <p class="text-muted"><%= t('.features_section.third.text') %></p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-lock-open text-primary"></i>
-                  <h3>Open Source</h3>
-                  <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                  <h3><%= t('.features_section.fourth.title') %></h3>
+                  <p class="text-muted"><%= t('.features_section.fourth.text') %></p>
                 </div>
               </div>
             </div>
@@ -164,7 +164,7 @@
     </div>
   </section>
 
-  <section class="cta">
+  <section style="display: none;" class="cta">
     <div class="cta-content">
       <div class="container">
         <h2>Stop waiting.<br>Start building.</h2>
