--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,1 +1,71 @@
-screen_name: <%= @user.screen_name %>
+<div class="container">
+  <div class="mb-5">
+    <%= render partial: 'shared/profile_section', locals: { user: @user } %>
+  </div>
+
+  <div class="tabs-section">
+    <ul class="nav nav-tabs" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link active" data-toggle="tab" href="#search-by-job" role="tab" aria-selected="true">Search by Job</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="tab" href="#search-by-location" role="tab" aria-selected="false">Search by Location</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="tab" href="#notice-changes" role="tab" aria-selected="false">Notice profile changes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="tab" href="#track-by-keywords" role="tab" aria-selected="false">Track by Keywords</a>
+      </li>
+    </ul>
+    <div class="tab-content pt-5">
+      <div class="tab-pane fade show active" id="search-by-job" role="tabpanel">
+        <div class="form-group">
+          <label for="job-input">Job</label>
+          <input type="text" class="form-control" id="job-input" aria-describedby="emailHelp" placeholder="Enter job">
+          <button id="send" class="btn btn-primary">Search</button>
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="search-by-location" role="tabpanel">
+        <div class="form-group">
+          <label for="location-input">Location</label>
+          <input type="text" class="form-control" id="location-input" aria-describedby="emailHelp" placeholder="Enter location">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="notice-changes" role="tabpanel">
+        <div class="form-group">
+          <label for="notice-input">Aaa</label>
+          <input type="text" class="form-control" id="notice-input" aria-describedby="emailHelp" placeholder="Enter aaa">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="track-by-keywords" role="tabpanel">
+        <div class="form-group">
+          <label for="keyword-input">Keyword</label>
+          <input type="text" class="form-control" id="keyword-input" aria-describedby="emailHelp" placeholder="Enter keyword">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    function searchByJob(query) {
+      var url = '<%= api_followers_job_searches_path %>';
+      $.get(url, {q: query}).done(function (res) {
+        var users = res.users;
+        console.log('users', users);
+      });
+    }
+
+    $(function () {
+      $('#send').on('click', function () {
+        var query = $('#job-input').val();
+        searchByJob(query);
+      });
+    });
+  </script>
+</div>
+
