--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,40 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<script src="<%= asset_path '/template/js/new-age.js' %>"></script>
 
-<head>
+<div id="new-age-container">
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>New Age - Start Bootstrap Theme</title>
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-  <!-- Custom fonts for this template -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css" integrity="sha512-QKC1UZ/ZHNgFzVKSAhV5v5j73eeL9EEN289eKAEFaAjgAiobVAnVv/AGuPbXsKl1dNoel3kNr6PYnSiTzVVBCw==" crossorigin="anonymous" />
-
-  <!-- Plugin CSS -->
-  <link rel="stylesheet" href="<%= asset_path '/template/device-mockups/device-mockups.css' %>">
-
-  <!-- Custom styles for this template -->
-  <link href="<%= asset_path '/template/css/new-age.css' %>" rel="stylesheet">
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js" integrity="sha512-0QbL0ph8Tc8g5bLhfVzSqxe9GERORsKhIn1IrpxDAgUsbBGz/V7iSav2zzW325XGd1OMLdL4UiqRJj702IeqnQ==" crossorigin="anonymous"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="<%= asset_path '/template/js/new-age.js' %>"></script>
-
-</head>
-
-<body id="page-top">
-
-  <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top"><%= t('.app_name') %></a>
@@ -64,7 +31,7 @@
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
             <h1 class="mb-5"><%= t('.hero_section.text') %></h1>
-            <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger"><%= t('.hero_section.button') %></a>
+            <a href="<%= user_twitter_omniauth_authorize_path %>" class="btn btn-outline btn-xl js-scroll-trigger"><%= t('.hero_section.button') %></a>
           </div>
         </div>
         <div class="col-lg-5 my-auto">
@@ -215,7 +182,4 @@
       </ul>
     </div>
   </footer>
-
-</body>
-
-</html>
+</div>
