--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,7 +31,7 @@
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
             <h1 class="mb-5"><%= t('.hero_section.text') %></h1>
-            <a href="<%= user_twitter_omniauth_authorize_path %>" class="btn btn-outline btn-xl js-scroll-trigger"><%= t('.hero_section.button') %></a>
+            <a href="<%= raw user_twitter_omniauth_authorize_path %>" class="btn btn-outline btn-xl js-scroll-trigger"><%= t('.hero_section.button') %></a>
           </div>
         </div>
         <div class="col-lg-5 my-auto">
