--- a/app/views/shared/_profile_section.html.erb
+++ b/app/views/shared/_profile_section.html.erb
@@ -15,6 +15,10 @@
       <div><span class="text-muted">{{screen_name}}</span></div>
     </div>
     <div class="mb-3">{{description}}</div>
+    <div class="mb-3">
+      <i class="fas fa-map-marker-alt text-muted"></i>
+      {{location}}
+    </div>
     <div class="d-inline-block mr-3">
       <strong>{{friends_count}}</strong>
       <span class="text-muted"><%= t('.following') %></span>
