--- a/app/views/shared/_search_category.html.erb
+++ b/app/views/shared/_search_category.html.erb
@@ -1,19 +1,19 @@
 <% container_id = SecureRandom.urlsafe_base64(10) %>
 <div id="<%= container_id %>">
   <div class="mb-2">
-    Search category
+    <%= t('.title') %>
     <i class="far fa-question-circle text-muted"></i>
   </div>
 
   <div class="mb-1">
     <div id="<%= element_id %>" class="btn-group" role="group">
-      <button type="button" class="btn-friends btn btn-outline-secondary" data-value="friends">friends</button>
-      <button type="button" class="btn-followers btn btn-primary" data-value="followers">Followers</button>
+      <button type="button" class="btn-friends btn btn-outline-secondary" data-value="friends"><%= t('.friends.label') %></button>
+      <button type="button" class="btn-followers btn btn-primary" data-value="followers"><%= t('.followers.label') %></button>
     </div>
   </div>
 
-  <div class="friends-selected-text small text-muted" style="display: none;"><strong>Friends</strong> is selected.</div>
-  <div class="followers-selected-text small text-muted"><strong>Followers</strong> is selected.</div>
+  <div class="friends-selected-text small text-muted" style="display: none;"><%= t('.friends.help_html') %></div>
+  <div class="followers-selected-text small text-muted"><%= t('.followers.help_html') %></div>
 </div>
 
 <script>
@@ -22,25 +22,25 @@
     var friendsButton = $('#' + containerId).find('.btn-friends');
     var followersButton = $('#' + containerId).find('.btn-followers');
 
-    function selectFollowers() {
-      friendsButton.removeClass('btn-primary').addClass('btn-outline-secondary');
-      followersButton.removeClass('btn-outline-secondary').addClass('btn-primary');
-      $('.friends-selected-text').hide();
-      $('.followers-selected-text').hide().fadeIn(500);
+    function activateButton(button) {
+      button.removeClass('btn-outline-secondary').addClass('btn-primary');
     }
 
-    function selectFriends() {
-      friendsButton.removeClass('btn-outline-secondary').addClass('btn-primary');
-      followersButton.removeClass('btn-primary').addClass('btn-outline-secondary');
-      $('.friends-selected-text').hide().fadeIn(500);
-      $('.followers-selected-text').hide();
+    function deactivateButton(button) {
+      button.removeClass('btn-primary').addClass('btn-outline-secondary');
     }
 
     function switchActiveButton() {
       if ($(this).hasClass('btn-followers')) {
-        selectFollowers();
+        deactivateButton(friendsButton);
+        activateButton(followersButton);
+        $('.friends-selected-text').hide();
+        $('.followers-selected-text').hide().fadeIn(500);
       } else {
-        selectFriends();
+        deactivateButton(followersButton);
+        activateButton(friendsButton);
+        $('.friends-selected-text').hide().fadeIn(500);
+        $('.followers-selected-text').hide();
       }
     }
 
