--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -8,21 +8,21 @@
       <%= render partial: 'shared/search_category', locals: { element_id: 'search-category-buttons' } %>
     </div>
 
-    <div class="mr-5">
-      <%= render partial: 'shared/search_type', locals: { element_id: 'search-type-buttons' } %>
-    </div>
-
     <div>
-      <div class="mb-2">
-        Search value
-        <i class="far fa-question-circle text-muted"></i>
-      </div>
-      <select id="search-value" class="form-control" style="width: initial;"></select>
+      <%= render partial: 'shared/search_type', locals: { element_id: 'search-type-buttons' } %>
     </div>
   </div>
 
   <div class="mb-5">
-    <button id="job-submit" type="submit" class="btn btn-primary">Search</button>
+    <div class="mb-2">
+      <%= t('shared.search_value.title') %>
+      <i class="far fa-question-circle text-muted"></i>
+    </div>
+    <select id="search-value" class="form-control" style="width: initial;"></select>
+  </div>
+
+  <div class="mb-5">
+    <button id="job-submit" type="submit" class="btn btn-primary"><%= t('shared.search_value.submit') %></button>
   </div>
 
   <div class="mb-5">
@@ -42,25 +42,45 @@
         <div>
           <div><strong>{{name}}</strong></div>
           <div>
-            <a class="text-muted" href="https://twitter.com/{{screen_name}}" target="_blank">{{screen_name}}</a>
+            <a class="text-muted" href="https://twitter.com/{{screen_name}}" target="_blank">@{{screen_name}}</a>
           </div>
         </div>
       </div>
 
-      <div class="mb-3">{{description}}</div>
+      <div class="mb-3">{{{description}}}</div>
 
       <div class="mb-3">
-        <i class="fas fa-map-marker-alt text-muted"></i>
-        {{location}}
+        <div class="d-inline-block mr-3">
+          <i class="fas fa-map-marker-alt text-muted"></i>
+          <span class="text-muted">{{location}}</span>
+        </div>
+        <div class="d-inline-block">
+          <i class="fas fa-link text-muted"></i>
+          <a class="text-muted" href="{{url}}" target="_blank">
+            {{url_s}}
+          </a>
+        </div>
       </div>
 
-      <div class="d-inline-block mr-3">
-        <strong>{{friends_count}}</strong>
-        <span class="text-muted"><%= t('.following') %></span>
-      </div>
-      <div class="d-inline-block">
-        <strong>{{followers_count}}</strong>
-        <span class="text-muted"><%= t('.followers') %></span>
+      <div>
+        <div class="d-inline-block mr-3">
+          <a href="https://twitter.com/{{screen_name}}" target="_blank">
+            <strong class="text-body">{{statuses_count_s}}</strong>
+            <span class="text-muted"><%= t('.statuses') %></span>
+          </a>
+        </div>
+        <div class="d-inline-block mr-3">
+          <a href="https://twitter.com/{{screen_name}}/following" target="_blank">
+            <strong class="text-body">{{friends_count_s}}</strong>
+            <span class="text-muted"><%= t('.following') %></span>
+          </a>
+        </div>
+        <div class="d-inline-block">
+          <a href="https://twitter.com/{{screen_name}}/followers" target="_blank">
+            <strong class="text-body">{{followers_count_s}}</strong>
+            <span class="text-muted"><%= t('.followers') %></span>
+          </a>
+        </div>
       </div>
     </div>
   </div>
@@ -83,6 +103,10 @@
               $('#search-by-job-response').text('No results found').hide().fadeIn(500);
             } else {
               res.users.forEach(function (user) {
+                if (user.description) {
+                  user.description = user.description.replace('\n', '<br>').replace(/https?:\/\//g, '');
+                  user.description = linkifyHtml(user.description, {defaultProtocol: 'https'});
+                }
                 var template = $('#search-by-job-template').html();
                 var rendered = $(Mustache.render(template, user));
                 rendered.find('img').each(function () {
