--- a/app/views/shared/_profile_section.html.erb
+++ b/app/views/shared/_profile_section.html.erb
@@ -12,26 +12,52 @@
   <div class="p-3">
     <div class="mb-3">
       <div><strong>{{name}}</strong></div>
-      <div><span class="text-muted">{{screen_name}}</span></div>
+      <div>
+        <a class="text-muted" href="https://twitter.com/{{screen_name}}" target="_blank">@{{screen_name}}</a>
+      </div>
     </div>
-    <div class="mb-3">{{description}}</div>
+    <div class="mb-3">{{{description}}}</div>
     <div class="mb-3">
-      <i class="fas fa-map-marker-alt text-muted"></i>
-      {{location}}
+      <div class="d-inline-block mr-3">
+        <i class="fas fa-map-marker-alt text-muted"></i>
+        <span class="text-muted">{{location}}</span>
+      </div>
+      <div class="d-inline-block">
+        <i class="fas fa-link text-muted"></i>
+        <a class="text-muted" href="{{url}}" target="_blank">
+          {{url_s}}
+        </a>
+      </div>
     </div>
-    <div class="d-inline-block mr-3">
-      <strong>{{friends_count}}</strong>
-      <span class="text-muted"><%= t('.following') %></span>
-    </div>
-    <div class="d-inline-block">
-      <strong>{{followers_count}}</strong>
-      <span class="text-muted"><%= t('.followers') %></span>
+    <div>
+      <div class="d-inline-block mr-3">
+        <a href="https://twitter.com/{{screen_name}}" target="_blank">
+          <strong class="text-body">{{statuses_count_s}}</strong>
+          <span class="text-muted"><%= t('.statuses') %></span>
+        </a>
+      </div>
+      <div class="d-inline-block mr-3">
+        <a href="https://twitter.com/{{screen_name}}/following" target="_blank">
+          <strong class="text-body">{{friends_count_s}}</strong>
+          <span class="text-muted"><%= t('.following') %></span>
+        </a>
+      </div>
+      <div class="d-inline-block">
+        <a href="https://twitter.com/{{screen_name}}/followers" target="_blank">
+          <strong class="text-body">{{followers_count_s}}</strong>
+          <span class="text-muted"><%= t('.followers') %></span>
+        </a>
+      </div>
     </div>
   </div>
 </div>
 
 <script>
   function renderTemplate(user) {
+    if (user.description) {
+      user.description = user.description.replace('\n', '<br>').replace(/https?:\/\//g, '');
+      user.description = linkifyHtml(user.description, {defaultProtocol: 'https'});
+    }
     var template = $('#profile-section-user-template').html();
     var rendered = $(Mustache.render(template, user));
     rendered.find('img').each(function () {
