--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -3,183 +3,9 @@
     <%= render partial: 'shared/profile_section', locals: { user: @user } %>
   </div>
 
-  <div class="d-flex mb-5">
-    <div class="mr-5">
-      <%= render partial: 'shared/search_category', locals: { element_id: 'search-category-buttons' } %>
-    </div>
-
-    <div>
-      <%= render partial: 'shared/search_type', locals: { element_id: 'search-type-buttons' } %>
-    </div>
-  </div>
-
   <div class="mb-5">
-    <div class="mb-2">
-      <%= t('shared.search_value.title') %>
-      <i class="far fa-question-circle text-muted"></i>
-    </div>
-    <select id="search-value" class="form-control" style="width: initial;"></select>
+    <%= render partial: 'form' %>
   </div>
-
-  <div class="mb-5">
-    <button id="job-submit" type="submit" class="btn btn-primary"><%= t('shared.search_value.submit') %></button>
-  </div>
-
-  <div class="mb-5">
-    <hr>
-  </div>
-
-  <div id="search-by-job-response" style="min-height: 300px;"></div>
-
-  <div id="search-by-job-template" style="display: none;">
-    <div class="border mb-3 p-3">
-      <div class="d-flex mb-3">
-        <div class="mr-3">
-          <a href="https://twitter.com/{{screen_name}}" target="_blank">
-            <img class="rounded-circle border shadow-sm" data-src="{{profile_image_url}}" width="40" height="40">
-          </a>
-        </div>
-        <div>
-          <div><strong>{{name}}</strong></div>
-          <div>
-            <a class="text-muted" href="https://twitter.com/{{screen_name}}" target="_blank">@{{screen_name}}</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="mb-3">{{{description}}}</div>
-
-      <div class="mb-3">
-        <div class="d-inline-block mr-3">
-          <i class="fas fa-map-marker-alt text-muted"></i>
-          <span class="text-muted">{{location}}</span>
-        </div>
-        <div class="d-inline-block">
-          <i class="fas fa-link text-muted"></i>
-          <a class="text-muted" href="{{url}}" target="_blank">
-            {{url_s}}
-          </a>
-        </div>
-      </div>
-
-      <div>
-        <div class="d-inline-block mr-3">
-          <a href="https://twitter.com/{{screen_name}}" target="_blank">
-            <strong class="text-body">{{statuses_count_s}}</strong>
-            <span class="text-muted"><%= t('.statuses') %></span>
-          </a>
-        </div>
-        <div class="d-inline-block mr-3">
-          <a href="https://twitter.com/{{screen_name}}/following" target="_blank">
-            <strong class="text-body">{{friends_count_s}}</strong>
-            <span class="text-muted"><%= t('.following') %></span>
-          </a>
-        </div>
-        <div class="d-inline-block">
-          <a href="https://twitter.com/{{screen_name}}/followers" target="_blank">
-            <strong class="text-body">{{followers_count_s}}</strong>
-            <span class="text-muted"><%= t('.followers') %></span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script>
-    $(function () {
-      function search() {
-        var category = $('#search-category-buttons').find('.btn-primary').data('value');
-        var type = $('#search-type-buttons').find('.btn-primary').data('value');
-
-        if ((category === 'friends' || category === 'followers') && (type === 'job' || type === 'location')) {
-          var url = '<%= raw api_searches_path %>';
-          var value = $('#search-value').val();
-          var params = {category: category, type: type, value: value}
-
-          $.get(url, params).done(function (res) {
-            $('#search-by-job-response').empty();
-
-            if (!res.users || res.users.length === 0) {
-              $('#search-by-job-response').text('No results found').hide().fadeIn(500);
-            } else {
-              res.users.forEach(function (user) {
-                if (user.description) {
-                  user.description = user.description.replace('\n', '<br>').replace(/https?:\/\//g, '');
-                  user.description = linkifyHtml(user.description, {defaultProtocol: 'https'});
-                }
-                var template = $('#search-by-job-template').html();
-                var rendered = $(Mustache.render(template, user));
-                rendered.find('img').each(function () {
-                  var img = $(this);
-                  img.attr('src', img.attr('data-src'));
-                });
-                $('#search-by-job-response').append(rendered).hide().fadeIn(500);
-              })
-            }
-          });
-        }
-      }
-
-      function updateSearchValueOptions() {
-        var category = $('#search-category-buttons').find('.btn-primary').data('value');
-        var type = $('#search-type-buttons').find('.btn-primary').data('value');
-
-        if (category === 'friends') {
-          if (type === 'job') {
-            setJobOptions();
-          } else if (type === 'location') {
-            setLocationOptions();
-          }
-        } else if (category === 'followers') {
-          if (type === 'job') {
-            setJobOptions();
-          } else if (type === 'location') {
-            setLocationOptions();
-          }
-        }
-      }
-
-      $('#search-category-buttons').on('click', function () {
-        updateSearchValueOptions();
-      });
-
-      $('#search-type-buttons').on('click', function () {
-        updateSearchValueOptions();
-      });
-
-      $('#job-submit').on('click', function () {
-        search();
-        return false;
-      });
-
-      function setJobOptions() {
-        var url = '<%= raw api_job_options_path %>';
-        var category = $('#search-category-buttons').find('.btn-primary').data('value');
-
-        $.get(url, {category: category}).done(function (res) {
-          $('#search-value').empty();
-          res.options.forEach(function (option) {
-            var tag = $('<option/>', {value: option.value, text: option.label});
-            $('#search-value').append(tag);
-          });
-        });
-      }
-
-      function setLocationOptions() {
-        var url = '<%= raw api_location_options_path %>';
-        var category = $('#search-category-buttons').find('.btn-primary').data('value');
-
-        $.get(url, {category: category}).done(function (res) {
-          $('#search-value').empty();
-          res.options.forEach(function (option) {
-            var tag = $('<option/>', {value: option.value, text: option.label});
-            $('#search-value').append(tag);
-          });
-        });
-      }
-
-      setJobOptions();
-    });
-  </script>
 </div>
 
+<%= render partial: 'templates/search_response_user_template' %>
